# notams_to_geojson

./: .buildconfig  .gitignore  README.md  build.sh  install-deps.sh  meson.build  notams_to_geojson  uninstall.sh
n2g/: converter.py  main.py  meson.build
